# nosh

./: .gitignore  README.md  flake.nix  meson.build  meson.options
src/: App.vala  AppState.vala  gresource.xml  meson.build  style.scss
src/bar/: Bar.scss  Bar.vala  Center.vala  Left.vala  QuickSettings.scss  QuickSettings.vala  Right.vala  meson.build
src/bar/widgets/: AudioSlider.vala  Battery.vala  IdleInhibitor.vala  Media.vala  QuickSettingsButton.vala  SysTray.vala  SystemStats.vala  Time.vala  Volume.vala  Wifi.vala  Workspaces.vala  meson.build
src/notifications/: Notifications.scss  Window.vala  meson.build
src/notifications/widgets/: NotificationCard.vala  NotificationsContainer.vala  lookup_icon.vala  meson.build
src/quick_settings/: QuickSettings.scss  Window.vala  meson.build
src/quick_settings/utils/: KDEManager.vala  meson.build
src/quick_settings/widgets/: Bluetooth.vala  BluetoothDropdown.vala  BrightnessSlider.vala  Card.vala  Connectivity.vala  KDEConnect.vala  KDEConnectDropdown.vala  LargeButton.vala  Microphone.vala  QuickToggleButton.vala  VolumeSlider.vala  WiFi.vala  WiFiDropdown.vala  meson.build
src/style/: _blocks.scss  _functions.scss  _variables.scss  global.scss
src/style/common/: _blur.scss  _borders.scss  _color.scss  _font.scss  _gap.scss  _index.scss  _margin.scss  _opacity.scss  _padding.scss  _roundness.scss  _size.scss  _transition.scss
src/utils/: clear_children.vala  meson.build
src/utils/Zwp/: IdleInhibitorManager.vala  idle-inhibit.vapi
src/widgets/: AudioSlider.scss  AudioSlider.vala  Battery.vala  FocusedClient.vala  IdleInhibitor.vala  Media.vala  QuickSettingsButton.vala  SysTray.vala  Time.vala  Wifi.vala  Workspaces.vala  meson.build
